gcc/tree-ssa-loop-ivopts.c
@@ -1686,7 +1686,11 @@ find_interesting_uses_address (struct ivopts_data *data, gimple stmt, tree *op_p
 	  while (handled_component_p (*ref))
 	    ref = &TREE_OPERAND (*ref, 0);
 	  if (TREE_CODE (*ref) == INDIRECT_REF)
-	    *ref = fold_indirect_ref (*ref);
+	    {
+	      tree tem = gimple_fold_indirect_ref (TREE_OPERAND (*ref, 0));
+	      if (tem)
+		*ref = tem;
+	    }
 	}
     }
 
